@@ -1082,6 +1082,9 @@ Documentation
 
 Build
 
+* LUCENE-4115: JAR resolution/ cleanup should be done automatically for ant 
+  clean/ eclipse/ resolve (Dawid Weiss)
+
 * LUCENE-4047: Cleanup of LuceneTestCase: moved blocks of initialization/ cleanup
   code into JUnit instance and class rules. (Dawid Weiss)
 
